tests/paczka1/fuzzy1/57266923.err
Error in line 6: V6zXy S312 20,5
Error in line 8: V6zXy A629 58,0
Error in line 12: cIJNYK A899 14,2
Error in line 3: A524 A899 83,4
Error in line 20: A524 A524 13,8
Error in line 24: ?VÚzXy
Error in line 21: A524 A629 3,4
Error in line 23: IQCcD3u9DP S312 23,5
Error in line 27: A524 S312 30,2
Error in line 35: A524 A524 42,6
